// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charge AfterContent should aggregate line_items by subscriptions 1`] = `
<div
  className="mt-2"
>
  <div
    className="card"
    key="1"
  >
    <CardBody
      className="header clearfix"
      tag="div"
    >
      <a
        target="_blank"
      >
        <span>
          🔄 Subscription #
          1
        </span>
      </a>
      <SubscriptionAfterTitle
        isEditing={false}
        source={
          Immutable.Map {
            charge_id: undefined,
            subscription_id: "1",
          }
        }
      />
    </CardBody>
    <CardBody
      className="content"
      tag="div"
    >
      <span
        key="1-undefined"
      >
        foo
         (
        7
        )
      </span>
      <span
        key="1-undefined"
      >
        bar
         (
        5
        )
      </span>
    </CardBody>
  </div>
  <div
    className="card"
    key="2"
  >
    <CardBody
      className="header clearfix"
      tag="div"
    >
      <a
        target="_blank"
      >
        <span>
          🔄 Subscription #
          2
        </span>
      </a>
      <SubscriptionAfterTitle
        isEditing={false}
        source={
          Immutable.Map {
            charge_id: undefined,
            subscription_id: "2",
          }
        }
      />
    </CardBody>
    <CardBody
      className="content"
      tag="div"
    >
      <span
        key="2-undefined"
      >
        baz
         (
        1
        )
      </span>
    </CardBody>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund
    </div>,
        "key": "refund",
        "options": Array [
          Object {
            "label": "Refund charge",
            "parameters": Array [
              Object {
                "defaultValue": 18,
                "max": 18,
                "min": 0.01,
                "name": "amount",
                "placeholder": "Amount",
                "required": true,
                "step": 0.01,
                "type": "number",
              },
            ],
            "value": "rechargeRefundCharge",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund charge
    </div>,
        "tooltip": "Refund this charge, partially or totally.",
      },
    ]
  }
  payload={
    Object {
      "charge_id": undefined,
    }
  }
/>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 2`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund
    </div>,
        "key": "refund",
        "options": Array [
          Object {
            "label": "Refund charge",
            "parameters": Array [
              Object {
                "defaultValue": 10,
                "max": 10,
                "min": 0.01,
                "name": "amount",
                "placeholder": "Amount",
                "required": true,
                "step": 0.01,
                "type": "number",
              },
            ],
            "value": "rechargeRefundCharge",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund charge
    </div>,
        "tooltip": "Refund this charge, partially or totally.",
      },
    ]
  }
  payload={
    Object {
      "charge_id": undefined,
    }
  }
/>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund
    </div>,
        "key": "refund",
        "options": Array [
          Object {
            "label": "Refund charge",
            "parameters": Array [
              Object {
                "defaultValue": 0,
                "max": 0,
                "min": 0.01,
                "name": "amount",
                "placeholder": "Amount",
                "required": true,
                "step": 0.01,
                "type": "number",
              },
            ],
            "value": "rechargeRefundCharge",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund charge
    </div>,
        "tooltip": "Refund this charge, partially or totally.",
      },
    ]
  }
  payload={
    Object {
      "charge_id": undefined,
    }
  }
/>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 2`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund
    </div>,
        "key": "refund",
        "options": Array [
          Object {
            "label": "Refund charge",
            "parameters": Array [
              Object {
                "defaultValue": 18,
                "max": 18,
                "min": 0.01,
                "name": "amount",
                "placeholder": "Amount",
                "required": true,
                "step": 0.01,
                "type": "number",
              },
            ],
            "value": "rechargeRefundCharge",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-2"
          >
                refresh
          </i>
          Refund charge
    </div>,
        "tooltip": "Refund this charge, partially or totally.",
      },
    ]
  }
  payload={
    Object {
      "charge_id": undefined,
    }
  }
/>
`;

exports[`Charge AfterTitle should not display the refund action when the status is not SUCCESS or PARTIALLY_REFUNDED 1`] = `
<ActionButtonsGroup
  actions={Array []}
  payload={
    Object {
      "charge_id": undefined,
    }
  }
/>
`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 1`] = `""`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 2`] = `""`;

exports[`Charge BeforeContent should display default color if there's no matching status 1`] = `
<div>
  <div
    className="simple-field"
  >
    <span
      className="field-label"
    >
      Status:
    </span>
    <span
      className="field-value"
    >
      <Badge
        color="secondary"
        pill={false}
        tag="span"
      >
        Foobar
      </Badge>
    </span>
  </div>
</div>
`;

exports[`Charge BeforeContent should display the appropriate color if there's a matching status 1`] = `
<div>
  <div
    className="simple-field"
  >
    <span
      className="field-label"
    >
      Status:
    </span>
    <span
      className="field-value"
    >
      <Badge
        color="danger"
        pill={false}
        tag="span"
      >
        Error
      </Badge>
    </span>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action if the charge is queued 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-1"
          >
                block
          </i>
          Skip
    </div>,
        "key": "skip",
        "options": Array [
          Object {
            "value": "rechargeSkipCharge",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-1"
          >
                block
          </i>
          Skip charge on subscription
    </div>,
        "tooltip": "Skip the charge for this subscription on Recharge. No order will be created and no item will be shipped.",
      },
    ]
  }
  payload={
    Object {
      "charge_id": 2,
      "subscription_id": 3,
    }
  }
/>
`;

exports[`Charge SubscriptionAfterTitle should display the unskipCharge action if the charge is skipped 1`] = `
<ActionButtonsGroup
  actions={
    Array [
      Object {
        "child": <div>
          <i
                className="material-icons mr-1"
          >
                autorenew
          </i>
          Unskip
    </div>,
        "key": "unskip",
        "options": Array [
          Object {
            "value": "rechargeUnskipCharge",
          },
        ],
        "title": <div>
          <i
                className="material-icons mr-1"
          >
                block
          </i>
          Unskip charge on subscription
    </div>,
        "tooltip": "Unskip the charge for this subscription on Recharge.",
      },
    ]
  }
  payload={
    Object {
      "charge_id": 2,
      "subscription_id": 3,
    }
  }
/>
`;

exports[`Charge SubscriptionAfterTitle should not display any action if the charge is nor queued nor skipped 1`] = `
<ActionButtonsGroup
  actions={Array []}
  payload={
    Object {
      "charge_id": undefined,
      "subscription_id": undefined,
    }
  }
/>
`;

exports[`Charge SubscriptionAfterTitle should return null if isEditing 1`] = `""`;

exports[`Charge SubscriptionAfterTitle should return null if there's no integrationId 1`] = `""`;
